*2.0.5* (October 19th, 2008)

* Included in Rails 2.0.5


*2.0.4* (2nd September 2008)

* Fixed the rexml vulnerability disclosed at http://www.ruby-lang.org/en/news/2008/08/23/dos-vulnerability-in-rexml/ [koz]

* Remove :nodoc: entries around the ActiveSupport test/unit assertions.  #10946 [dancroak, jamesh]

* Fixed String#titleize to work for strings with 's too #10571 [trek]

* Changed the implementation of Enumerable#group_by to use a double array approach instead of a hash such that the insert order is honored [DHH/Marcel]

* remove multiple enumerations from ActiveSupport::JSON#convert_json_to_yaml when dealing with date/time values.  [rick]

* Hash#symbolize_keys skips keys that can't be symbolized.  #10500 [Brad Greenlee]

* Ruby 1.9 compatibility.  #1689, #10466, #10468, #10554 [Cheah Chu Yeow, Pratik Naik, Jeremy Kemper, Dirkjan Bussink]

* TimeZone#to_s uses UTC rather than GMT.  #1689 [Cheah Chu Yeow]

* Refactor of Hash#symbolize_keys! to use Hash#replace.  Closes #10420 [ReinH]

* Fix HashWithIndifferentAccess#to_options! so it doesn't clear the options hash.  Closes #10419 [ReinH]


*2.0.1* (December 7th, 2007)

* Added Array#from and Array#to that behaves just from String#from and String#to [DHH]

* Fix that empty collections should be treated as empty arrays regardless of whitespace for Hash#from_xml #10255 [adamj]

* Time#time_with_datetime_fallback, Time#to_datetime, Date#to_datetime and String#to_datetime honor Ruby's default calendar reform setting. #10201 [Geoff Buesing]

* Change Time and DateTime #end_of_month to return last second of month instead of beginning of last day of month. Closes #10200 [Geoff Buesing]

* Speedup String#blank?  [Jeremy Kemper, Koz]

* Add documentation for Hash#diff. Closes #9306 [Tarmo Tänav]

* Add new superclass_delegating_accessors.  Similar to class inheritable attributes but with subtly different semantics. [Koz, Tarmo Tänav]
