@@ -1,6 +1,10 @@
 *2.0.5* (October 19th, 2008)
 
-* Included in Rails 2.0.5
+* Add more standard Hash methods to ActiveSupport::OrderedHash [Steve Purcell]
+
+* Namespace Inflector, Dependencies, OrderedOptions, and TimeZone under ActiveSupport [Josh Peek]
+
+* Fixed Date#end_of_quarter to not blow up on May 31st [#289 state:resolved] (Danger)
 
 
 *2.0.4* (2nd September 2008)
